--- a/package.json
+++ b/package.json
@@ -21,23 +21,30 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "prisma": "^6.14.0",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "react-emails": "^1.2.3",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.1.2",
     "resend": "^6.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "zod": "^4.0.17"
   },
   "devDependencies": {
